add simple swagger
